# learning_python

./: README.md
course_100_days_of_code/: README.md
course_100_days_of_code/day_10/calculator/: README.md  pyproject.toml
course_100_days_of_code/day_11/blackjack/: README.md  pyproject.toml
course_100_days_of_code/day_12/guess_the_number/: pyproject.toml
course_100_days_of_code/day_14/higher_lower_game/: pyproject.toml
course_100_days_of_code/day_15/project_coffee_machine/: pyproject.toml
course_100_days_of_code/day_17/quiz_game/: README.md  pyproject.toml
course_100_days_of_code/day_23/turtle_crossing_game/: pyproject.toml
course_100_days_of_code/day_23/turtle_crossing_game/pkgs/: car.py  helper.py  player.py  scoreboard.py
course_100_days_of_code/day_23/turtle_crossing_game/turtle_crossing_game/: app.py
course_100_days_of_code/day_26/nato_alphabet/: pyproject.toml
course_100_days_of_code/day_26/nato_alphabet/nato_alphabet/: main.py
course_100_days_of_code/day_29/password_manager/: .gitignore  pyproject.toml
course_100_days_of_code/day_29/password_manager/password_manager/: app.py
course_100_days_of_code/day_29/password_manager/pkgs/: UI.py  constants.py  find_data.py  generate_password.py  save_data.py
course_100_days_of_code/day_3/: .gitignore  README.md
course_100_days_of_code/day_31/capstone_project_flash_card/: pyproject.toml
course_100_days_of_code/day_31/capstone_project_flash_card/capstone_project_flash_card/: app.py
course_100_days_of_code/day_31/capstone_project_flash_card/data/: de_100_words.txt
course_100_days_of_code/day_31/capstone_project_flash_card/pkgs/: UI.py  constants.py  data_reading.py
course_100_days_of_code/day_32/email_downloader_and_parser/: .gitignore  README.md  pyproject.toml
course_100_days_of_code/day_32/email_downloader_and_parser/email_downloader_and_parser/: app.py
course_100_days_of_code/day_32/email_downloader_and_parser/pkgs/: constants.py  email_fetching.py  json_cleaning.py
course_100_days_of_code/day_33/weather_forecast/: .gitignore  README.md  pyproject.toml
course_100_days_of_code/day_33/weather_forecast/pkgs/: data_fetching.py  plots.py  time_conversion.py  wmo_codes.py
course_100_days_of_code/day_33/weather_forecast/weather_forecast/: app.py
course_100_days_of_code/day_34/trivia_questions_app/: README.md  pyproject.toml
course_100_days_of_code/day_34/trivia_questions_app/pkgs/: UI.py  constants.py
course_100_days_of_code/day_34/trivia_questions_app/trivia_questions_app/: app.py
course_100_days_of_code/day_45/: README.md  pyproject.toml
course_100_days_of_code/day_46/: README.md  pyproject.toml
course_100_days_of_code/day_46/src/day_46/: main.py
course_100_days_of_code/day_54/: pyproject.toml
course_100_days_of_code/day_55/: pyproject.toml
course_100_days_of_code/day_56/: pyproject.toml
course_100_days_of_code/day_57/: pyproject.toml
course_100_days_of_code/day_58/: pyproject.toml
course_100_days_of_code/day_59/: README.md  pyproject.toml
course_100_days_of_code/day_5b/: README.md  pyproject.toml
course_100_days_of_code/day_60/: pyproject.toml
course_100_days_of_code/day_60/src/: requirements.txt
course_100_days_of_code/day_60/src/day_60_original/: main.py
course_100_days_of_code/day_60/src/day_60_original/templates/: contact.html
course_100_days_of_code/day_60/src/html_form/: main.py
course_100_days_of_code/day_60/src/html_form/templates/: index.html
course_100_days_of_code/day_61/: pyproject.toml
course_100_days_of_code/day_61/src/: main.py
course_100_days_of_code/day_61/src/templates/: base.html  denied.html  index.html  login.html  success.html
course_100_days_of_code/day_62/: pyproject.toml
course_100_days_of_code/day_63/: .gitignore  pyproject.toml
course_100_days_of_code/day_63/src/: main.py  query_sqlalchemy.py
course_100_days_of_code/day_63/src/templates/: add.html  edit.html  index.html
course_100_days_of_code/day_64/: .gitignore  pyproject.toml
course_100_days_of_code/day_64/src/: main.py
course_100_days_of_code/day_64/src/templates/: add.html  edit.html  index.html
course_100_days_of_code/day_66/: pyproject.toml
course_100_days_of_code/day_67/: pyproject.toml
course_100_days_of_code/day_67/src/: main.py
course_100_days_of_code/day_67/src/instance/: posts.db
course_100_days_of_code/day_67/src/templates/: index.html  make-post.html
course_100_days_of_code/day_68/: pyproject.toml
course_100_days_of_code/day_68/src/: main.py
course_100_days_of_code/day_68/src/instance/: users.db
course_100_days_of_code/day_68/src/static/css/: styles.css
course_100_days_of_code/day_68/src/templates/: base.html  index.html  login.html  register.html  secrets.html
course_100_days_of_code/day_69/: .gitignore  pyproject.toml
course_100_days_of_code/day_69/src/: forms.py  main.py
course_100_days_of_code/day_69/src/templates/: header.html  index.html  login.html  make-post.html  post.html  register.html
course_100_days_of_code/instance/: users.db
course_100_days_of_code/section_3/: .gitignore
course_100_days_of_code/section_4/: README.md
course_100_days_of_code/section_5b_poetry/: README.md  main.py  pyproject.toml
course_100_days_of_code/section_7/project_hangman/: pyproject.toml
course_100_days_of_code/section_7/project_hangman/pkgs/: ascii_art.py
course_100_days_of_code/section_7/project_hangman/src/: app.py
day_72/: main.py  pyproject.toml
day_73/: main.py  pyproject.toml
day_74/: main.py  pyproject.toml
day_75/: main.py  pyproject.toml
day_76/: main.py  pyproject.toml
day_82/: README.md  constants.py  main.py  pyproject.toml
day_83/: README.md  main.py  pyproject.toml
day_83/app/: routes.py
day_83/app/templates/: base.html  (+5 more)
day_83/template/: base.html  index.html
day_83/templates/: base.html  blog.html  certifications.html  education.html  experience.html  index.html  interests.html  now.html  projects.html  skills.html
day_88/: main.py  pyproject.toml
day_88/app/: models.py  routes.py
day_89/: .gitignore  pyproject.toml
day_89/app/: models.py  routes.py
materials/: README.md
(+202 files in other folders)
