[project]
name = "day-60"
version = "0.1.0"
description = ""
authors = [
    {name = "alessandro.maccario",email = "alessandro.maccario@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "day_60", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
