[project]
name = "day-61"
version = "0.1.0"
description = ""
authors = [
    {name = "alessandro.maccario",email = "alessandro.maccario@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "bootstrap-flask (>=2.5.0,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "wtforms (>=3.2.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "day_61", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
