[project]
name = "day-63"
version = "0.1.0"
description = ""
authors = [
    {name = "alessandro.maccario",email = "alessandro.maccario@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "day_63", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
