[project]
name = "day-67"
version = "0.1.0"
description = ""
authors = [
    {name = "alessandro.maccario",email = "alessandro.maccario@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bootstrap-flask (>=2.5.0,<3.0.0)",
    "flask-ckeditor (>=1.0.0,<2.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "day_67", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
