[project]
name = "day-68"
version = "0.1.0"
description = ""
authors = [
    {name = "alessandro.maccario",email = "alessandro.maccario@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-login (>=0.6.3,<0.7.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poetry]
packages = [{include = "day_68", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
