[project]
name = "day-69"
version = "0.1.0"
description = ""
authors = [
    {name = "alessandro.maccario",email = "alessandro.maccario@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "bootstrap-flask (>=2.5.0,<3.0.0)",
    "flask-ckeditor (>=1.0.0,<2.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-gravatar (>=0.5.0,<0.6.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "cleanify (>=1.0.0,<2.0.0)",
    "bleach (>=6.2.0,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "day_69", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
