[tool.poetry]
name = "nato-alphabet"
version = "0.1.0"
description = ""
authors = ["alessandro-maccario <a.maccario1@campus.unimib.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
