[tool.poetry]
name = "password-manager"
version = "0.1.0"
description = ""
authors = ["alessandro-maccario <a.maccario1@campus.unimib.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hupper = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
